--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<h1> Welcome to Somnath's Profile Page </h1>
+<h1> Jhinuk Kundu </h1>
 
 <p> This page is under devlopment </p>
     
