--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Somnath's Home Page</title>
+    <title>Jhinuk Kundu</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
 
-<h1> Jhinuk Kundu </h1>
+<h1> Welcome to my page </h1>
 
 <p> This page is under devlopment </p>
     
