--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <h1> Welcome to my page </h1>
 
-<p> This page is under devlopment </p>
+    <p> Visit me here: <a href="https://medium.com/@musibs">Medium</a> </p>
     
 
 
