--- a/index.html
+++ b/index.html
@@ -5,16 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Somnath Musib</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
-<h1> Welcome to my page </h1>
-
-    <p> Visit me here: <a href="https://medium.com/@musibs">Medium</a> </p>
-    
-
-
+   <div class="container-fluid">
+        <div class="jumbotron text-center" id="background">
+            <div id="image">
+                <img src="image/profile.jpg" class="img-rounded"
+                alt="Profile Picture">
+            </div>
+            <div id="name">
+                <h1> Somnath Musib </h1>
+            </div>
+            <div id="links">
+                <a id="linkedIn" href="https://linkedin.com/in/musibs"><i class="fa fa-linkedin-square" style="font-size:36px"></i></a>
+                <a id="github" href="https://github.com/musibs"><i class="fa fa-github" style="font-size:36px"></i></a>
+                <a id="so" href="https://stackoverflow.com/users/2051126/somnath-musib"><i class="fa fa-stack-overflow" style="font-size:36px"></i></a>
+                <a id="github" href="https://medium.com/@musibs"><i class="fa fa-medium" style="font-size:36px"></i></a>
+            </div>
+            </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
