Corrected nav bar issue

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet"  href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Acme|Bree+Serif|Domine|Rokkitt&display=swap" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="font-mfizz.css" />
+  </head>
 <body>
     <section id="header">
         <nav class="navbar navbar-expand-lg">
@@ -197,7 +198,13 @@
       </div>
     </section>
     <section id="skills">
-
+      <div class="container">
+        <div class="row">
+          <div class="row">
+              <i class="icon-java-bold"></i>
+          </div>
+        </div>
+      </div>
     </section>
     <section id="portfolio">
 
