--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 </li>
                 <li class="nav-item"><a class="nav-link" href="#about">ABOUT</a></li>
                 <li class="nav-item"><a class="nav-link" href="#work">WORK</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">EDUCATION</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">SKILLS</a></li>
+                <li class="nav-item"><a class="nav-link" href="#education">EDUCATION</a></li>
+                <li class="nav-item"><a class="nav-link" href="#skills">SKILLS</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">COURSES</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">PORTFOLIO</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">REFERENCES</a></li>
@@ -68,7 +68,7 @@
     <section id="work">
       <div class="container">
         <h2 class="title-white text-center">Work Experience</h2>
-        <div class="row">
+        <div class="row main-row">
           <div class="col-md-2"></div>
           <div class="col-md-10">
             <div class="row">
@@ -169,8 +169,8 @@
       <div class="container">
           <h2 class="title text-center">Education</h2>
           <div class="row">
-              <div class="col-md-4"></div>
-              <div class="col-md-8">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
                 <div class="row">
                     <h3>West Bengal University of Technology</h3>
                     <ul class="list-inline">
@@ -182,14 +182,19 @@
                     </ul>
                     <hr />
                 </div>
+              </div>
+          </div>
+          <div class="row">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
                 <div class="row">
-                    <h3>Kamalpur Netaji High School</h3>
+                    <h3>West Bengal University of Technology</h3>
                     <ul class="list-inline">
-                      <li class="list-inline-item">Higher Secondary</li>
+                      <li class="list-inline-item">B.Tech in Computer Science</li>
                       <li class="list-inline-item">&bull;</li>
                       <li class="list-inline-item">West Bengal, India</li>
                       <li class="list-inline-item">&bull;</li>
-                      <li class="list-inline-item">Aug 2005 - Jul 2007</li>
+                      <li class="list-inline-item">Aug 2007 - Jul 2011</li>
                     </ul>
                     <hr />
                 </div>
@@ -199,10 +204,77 @@
     </section>
     <section id="skills">
       <div class="container">
+        <h2 class="title text-center">Skills</h2>
         <div class="row">
-          <div class="row">
-              <i class="icon-java-bold"></i>
+            <div class="col-md-4">
+                <div class="card">
+                  <div class="card-body">
+                    <h2 class="card-title text-center">Front End</h2>
+                    <hr>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 70%;">Java Script</div>
+                      </div>
+                      <div class="progress">
+                          <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">HTML & CSS</div>
+                      </div>
+                      <div class="progress">
+                          <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Bootstrap</div>
+                      </div>
+                      <div class="progress">
+                          <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">React</div>
+                      </div>
+                      <div class="progress">
+                          <div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Angular</div>
+                      </div>
+                  </div>
+                </div>
+              </div>
+          <div class="col-md-4">
+            <div class="card">
+              <div class="card-body">
+                <h2 class="card-title text-center">Back End</h2>
+                <hr>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Java</div>
+                  </div>
+                  <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Spring</div>
+                  </div>
+                  <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Micro Services</div>
+                  </div>
+                  <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Python</div>
+                  </div>
+                  <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Node Js</div>
+                  </div>
+              </div>
+            </div>
           </div>
+          <div class="col-md-4">
+              <div class="card">
+                <div class="card-body">
+                  <h2 class="card-title text-center">DevOps</h2>
+                  <hr>
+                  <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">AWS</div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Jenkins</div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Git</div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Maven</div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Continious Integration</div>
+                    </div>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -213,10 +285,10 @@
         <div class="container">
           <div class="row offset-2">
             <div class="col-md-5">
-                Ref
+                
             </div>
             <div class="col-md-5">
-              Ref
+              
             </div>
           </div>
         </div>
