--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<a target="_blank" href="https://github.com/musibs"><i class="fab fa-github"></i></a>
 			<a target="_blank" href="https://twitter.com/musib123"><i class="fab fa-twitter"></i></a>
 			<a target="_blank" href="https://dev.to/musibs"><i class="fab fa-dev"></i></a>
-			<a target="_blank" href="https://stackoverflow.com/story/somnathmusib"><i class="fab fa-stack-overflow"></i></a>
+			<a target="_blank" href="https://stackoverflow.com/story/musibs"><i class="fab fa-stack-overflow"></i></a>
 			<a target="_blank" href="https://www.linkedin.com/in/musibs"><i class="fab fa-linkedin"></i></a>
 			<a target="_blank" href="https://medium.com/@musibs"><i class="fab fa-medium"></i></a>
 			<a target="_blank" href="https://www.freecodecamp.org"><i class="fab fa-free-code-camp"></i></a>
