--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 			<a target="_blank" href="https://stackoverflow.com/story/musibs"><i class="fab fa-stack-overflow"></i></a>
 			<a target="_blank" href="https://www.linkedin.com/in/musibs"><i class="fab fa-linkedin"></i></a>
 			<a target="_blank" href="https://medium.com/@musibs"><i class="fab fa-medium"></i></a>
-			<a target="_blank" href="https://www.freecodecamp.org"><i class="fab fa-free-code-camp"></i></a>
+			<!--a target="_blank" href="https://www.freecodecamp.org"><i class="fab fa-free-code-camp"></i></!--a>
 			<a target="_blank" href="https://www.behance.net"><i class="fab fa-behance"></i></a>
-			<a target="_blank" href="https://codepen.io"><i class="fab fa-codepen"></i></a>
+			<a target="_blank" href="https://codepen.io"><i class="fab fa-codepen"></i></a> -->
     </div>
 	</main>
 </body>
