--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<title>Somnath Musib | Full Stack Developer</title>
 
-	<link rel="icon" href="favicon.ico" />
+	<link rel="icon" href="/favicon.ico" type="image/png" />
 
 	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
 	<link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet">
