--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Somnath!</div>
-		<div class="tagline">Full Stack Developer | Technical Writer </div>
+		<div class="tagline">Full Stack Developer, Manning Author for Spring Boot In Practice book, Technical Writer, Course Creator at Udemy</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/musibs"><i class="fab fa-github"></i></a>
