--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 	<link rel="stylesheet" href="css/themes/yellow-black.css">
 </head>
 <body>
-	<main>
+	<main> 
 		<div class="intro">Hello, I'm Somnath!</div>
-		<div class="tagline">Full Stack Developer, Manning Author for Spring Boot In Practice book, Technical Writer, Course Creator at Udemy</div>
+		<div class="tagline">Full Stack Developer, Manning Author for <a target="_blank" href="https://www.manning.com/books/spring-boot-in-practice">Spring Boot In Practice book</a>, Technical Writer, Course Creator at Udemy</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/musibs"><i class="fab fa-github"></i></a>
       <a target="_blank" href="https://www.linkedin.com/in/musibs"><i class="fab fa-linkedin"></i></a>
-			<a target="_blank" href="https://medium.com/@musibs"><i class="fab fa-medium"></i></a>
+			<a target="_blank" href="https://musibs.medium.com"><i class="fab fa-medium"></i></a>
 			<a target="_blank" href="https://twitter.com/musib123"><i class="fab fa-twitter"></i></a>
 			<a target="_blank" href="https://dev.to/musibs"><i class="fab fa-dev"></i></a>
 			<a target="_blank" href="https://stackoverflow.com/story/musibs"><i class="fab fa-stack-overflow"></i></a>
